--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 </section>
 <section>
 	<div class="grid-wrapper">
-		<div class=" polaroid container box"><img src="project.png">Latest</div>
-		<div class=" polaroid container box"><img src="project.png">Playlist</div>
-		<div class=" polaroid container box"><img src="project.png">Devotional</div>
-		<div class=" polaroid container box"><img src="project.png">Remix</div>
-		<div class=" polaroid container box"><img src="project.png">8D Music</div>
-		<div class=" polaroid container box"><img src="project.png">Punjabi</div>
-		<div class=" polaroid container box"><img src="project.png">Hindi</div>
-		<div class=" polaroid container box"><img src="project.png">English</div>
+		<div class=" polaroid container box"><img src="D:\muandbe\Project.png">Latest</div>
+		<div class=" polaroid container box"><img src="D:\muandbe\project.png">Playlist</div>
+		<div class=" polaroid container box"><img src="D:\muandbe\project.png">Devotional</div>
+		<div class=" polaroid container box"><img src="D:\muandbe\project.png">Remix</div>
+		<div class=" polaroid container box"><img src="D:\muandbe\project.png">8D Music</div>
+		<div class=" polaroid container box"><img src="D:\muandbe\project.png">Punjabi</div>
+		<div class=" polaroid container box"><img src="D:\muandbe\project.png">Hindi</div>
+		<div class=" polaroid container box"><img src="D:\muandbe\project.png">English</div>
 	</div></section>
 <footer class="footer">made by mu&be</footer>
 </body>
