--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
 		</ul> 
 	</nav>
 <section>
-	<div class="image"><img src="No Music.png" class="responsive"></div>
+	<div class="image"><img src="D:\muandbe\images\No Music.png" class="responsive"></div>
 </section>
 <section>
 	<div class="grid-wrapper">
-		<div class=" polaroid container box"><img src="D:\muandbe\Project.png">Latest</div>
-		<div class=" polaroid container box"><img src="D:\muandbe\project.png">Playlist</div>
-		<div class=" polaroid container box"><img src="D:\muandbe\project.png">Devotional</div>
-		<div class=" polaroid container box"><img src="D:\muandbe\project.png">Remix</div>
-		<div class=" polaroid container box"><img src="D:\muandbe\project.png">8D Music</div>
-		<div class=" polaroid container box"><img src="D:\muandbe\project.png">Punjabi</div>
-		<div class=" polaroid container box"><img src="D:\muandbe\project.png">Hindi</div>
-		<div class=" polaroid container box"><img src="D:\muandbe\project.png">English</div>
+		<div class=" polaroid container box"><img src="D:\muandbe\images\Project.png">Latest</div>
+		<div class=" polaroid container box"><img src="D:\muandbe\images\Project.png">Playlist</div>
+		<div class=" polaroid container box"><img src="D:\muandbe\images\Project.png">Devotional</div>
+		<div class=" polaroid container box"><img src="D:\muandbe\images\Project.png">Remix</div>
+		<div class=" polaroid container box"><img src="D:\muandbe\images\Project.png">8D Music</div>
+		<div class=" polaroid container box"><img src="D:\muandbe\images\Project.png">Punjabi</div>
+		<div class=" polaroid container box"><img src="D:\muandbe\images\Project.png">Hindi</div>
+		<div class=" polaroid container box"><img src="D:\muandbe\images\Project.png">English</div>
 	</div></section>
 <footer class="footer">made by mu&be</footer>
 </body>
