--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<nav class="header">
+	<nav class="header sticky">
 		<ul class="main-nav">
 			<li><a href="">About</li>
 			<li><a href="">Products</li>
