--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>muandbe</title>
 	<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&display=swap" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="index style.css">
+	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
 	<nav class="header sticky">
