--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
 	<title>muandbe</title>
 	<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&display=swap" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="index.css">
+	<link rel="stylesheet" type="text/css" href="index style.css">
 </head>
 <body>
 	<nav class="header sticky">
 		<ul class="main-nav">
-			<li>About</li>
-			<li>Products</li>
-			<li>Our Team</li>
-			<li class="push"><a href="https://mailchi.mp/9dea03b7b419/muandbe">Contact</a></li>
+			<li><a href="About.html">About us</a></li>
+			<li><a href="Message.html">Message</a></li>
+			<li>Register</li>
+			<li class="push"><a href="https://mailchi.mp/9dea03b7b419/muandbe">Subscribe</a></li>
 		</ul> 
 	</nav>
 	<br>
@@ -29,6 +29,13 @@
 		<div class=" polaroid container box"><img src="images\Project.png"><a href="Hindi.html">Hindi</a></div>
 		<div class=" polaroid container box"><img src="images\Project.png"><a href="English.html">English</a></div>
 	</div></section>
-<footer class="footer">made by mu&be</footer>
+<br>
+<br>
+<br>
+
+<footer class="footer">
+	<section> <div id="div1">Thank You!<br>Mu&Be<br>made by mu&be<br><br><br></div>
+	<div id="div2">All suggestions & feedback, please contact:<br>Email: muandbe@gmail.com</div></section>
+</footer>
 </body>
 </html>
