--- a/Devotional.html
+++ b/Devotional.html
@@ -2,18 +2,23 @@
 <html>
 <head>
 	<title> Devotional </title>
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="contentstyle.css">
 </head>
 <body>
 	<nav class="header sticky">
-		<ul class="main-nav">Devotional</ul>
+		<ul class="main-nav">Devotional</ul></nav>
 	<br>
 <section> <div class="container"></div>
 <div class="box"> <img src="images\Devotional\adharam madhuram.jpg"> Adharam Madhuram  <br/><audio controls> <source src="Music\Devotional\Adharam Madhuram Vadanam Madhuram.mp3" type="audio/mpeg" ></audio> </div>
 </section>
-<br>
-<p class="bottom"><a href="index.html"> Back </a></p>
-<br>
-<footer class="footer">made by mu&be</footer>
+<br><br><br>
+<a href="index.html" class="button">Go To Home</a>
+<br><br><br><br><br>
+
+
+<footer class="footer">
+	<section> <div id="div1">Thank You!<br>Mu&Be<br>made by mu&be<br><br><br></div>
+	<div id="div2">All suggestions & feedback, please contact:<br>Email: muandbe@gmail.com</div></section>
+</footer>
 </body>
 </html>
