--- a/English.html
+++ b/English.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 	<title> English </title>
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="contentstyle.css">
 </head>
 <body>
 	<nav class="header sticky">
-		<ul class="main-nav">English</ul>
+		<ul class="main-nav">English</ul></nav>
 	<br>
 <section> <div class="container"></div>
 <div class="box"> <img src="images\English\al nash.jpg"> Al Nash <br/><audio controls> <source src="Music\English\AI Nash - YoungBoy.mp3" type="audio/mpeg" ></audio> </div>
@@ -15,9 +15,12 @@
 <div class="box"> <img src="images\English\sugar brownie.jpg"> Sugar and Brownies <br/><audio controls> <source src="Music\English\Sugar And Brownies - Dharia.mp3" type="audio/mpeg"></audio> </div>
 <div class="box"> <img src="images\English\thank u next.jpg"> Thank u Next <br/><audio controls> <source src="Music\English\thank u, next - Ariana Grande.mp3" type="audio/mpeg"></audio> </div>
 </section>
-<br>
-<p class="bottom"><a href="index.html"> Back </a></p>
-<br>
-<footer class="footer">made by mu&be</footer>
+<br><br><br>
+<a href="index.html" class="button">Go To Home</a>
+<br><br><br><br><br>
+<footer class="footer">
+	<section> <div id="div1">Thank You!<br>Mu&Be<br>made by mu&be<br><br><br></div>
+	<div id="div2">All suggestions & feedback, please contact:<br>Email: muandbe@gmail.com</div></section>
+</footer>
 </body>
 </html>
