--- a/Hindi.html
+++ b/Hindi.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 	<title> Hindi </title>
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="contentstyle.css">
 </head>
 <body>
 	<nav class="header sticky">
-		<ul class="main-nav">Hindi</ul>
+		<ul class="main-nav">Hindi</ul></nav>
 	<br>
 <section> <div class="container"></div>
 <div class="box"> <img src="images\Hindi\tere bina.jpg"> Tere Bina <br/><audio controls> <source src="Music\Hindi\Tere Bina by Salman Khan.mp3" type="audio/mpeg" ></audio> </div>
@@ -15,9 +15,13 @@
 <div class="box"> <img src="images\Hindi\bheegi bheegi.jpg"> Bheegi Bheegi <br/><audio controls> <source src="Music\Hindi\Bheegi Bheegi Neha Kakkar.mp3" type="audio/mpeg"></audio> </div>
 <div class="box"> <img src="images\Hindi\teri yaari.jpg"> Teri Yaari <br/><audio controls> <source src="Music\Hindi\Teri Yaari Song Millind Gaba.mp3" type="audio/mpeg"></audio> </div>
 </section>
-<br>
-<p class="bottom"><a href="index.html"> Back </a></p>
-<br>
-<footer class="footer">made by mu&be</footer>
+<br><br><br>
+<a href="index.html" class="button">Go To Home</a>
+<br><br><br><br><br>
+
+<footer class="footer">
+	<section> <div id="div1">Thank You!<br>Mu&Be<br>made by mu&be<br><br><br></div>
+	<div id="div2">All suggestions & feedback, please contact:<br>Email: muandbe@gmail.com</div></section>
+</footer>
 </body>
 </html>
