--- a/Punjabi.html
+++ b/Punjabi.html
@@ -2,22 +2,25 @@
 <html>
 <head>
 	<title> Punjabi </title>
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="contentstyle.css">
 </head>
 <body>
 	<nav class="header sticky">
-		<ul class="main-nav">Punjabi</ul>
+		<ul class="main-nav">Punjabi</ul></nav>
 	<br>
 <section> <div class="container"></div>
-<div class="box"> <img src="images\punjabi\aam jahe munde.jpg"> Aam Jahe Munde <br/><audio controls> <source src="Music\Punjabi\AAM JAHE MUNDE PARMISH VERMA.mp3" type="audio/mpeg" ></audio> </div>
-<div class="box"> <img src="images\punjabi\blames.jpg"> Blames <br/><audio controls> <source src="Music\Punjabi\Blames - Dilpreet Dhillon.mp3" type="audio/mpeg"></audio> </div>
-<div class="box"> <img src="images\punjabi\dil nahi manda.jpg"> Dil Nahi Manda <br/><audio controls> <source src="Music\Punjabi\Dil Nahi Manda Gurnam Bhullar.mp3" type="audio/mpeg"></audio> </div>
-<div class="box"> <img src="images\punjabi\keh gayi sorry.jpg"> Keh Gayi Sorry <br/><audio controls> <source src="Music\Punjabi\Keh Gayi Sorry Jassie Gill.mp3" type="audio/mpeg"></audio> </div>
-<div class="box"> <img src="images\punjabi\roti.jpg"> Roti <br/><audio controls> <source src="Music\Punjabi\ROTI - Sidhu Moose Wala.mp3" type="audio/mpeg"></audio> </div>
+<div class="box"> <img src="images\Punjabi\aam jahe munde.jpg"> Aam Jahe Munde <br/><audio controls> <source src="Music\Punjabi\AAM JAHE MUNDE PARMISH VERMA.mp3" type="audio/mpeg" ></audio> </div>
+<div class="box"> <img src="images\Punjabi\blames.jpg"> Blames <br/><audio controls> <source src="Music\Punjabi\Blames - Dilpreet Dhillon.mp3" type="audio/mpeg"></audio> </div>
+<div class="box"> <img src="images\Punjabi\dil nahi manda.jpg"> Dil Nahi Manda <br/><audio controls> <source src="Music\Punjabi\Dil Nahi Manda Gurnam Bhullar.mp3" type="audio/mpeg"></audio> </div>
+<div class="box"> <img src="images\Punjabi\keh gayi sorry.jpg"> Keh Gayi Sorry <br/><audio controls> <source src="Music\Punjabi\Keh Gayi Sorry Jassie Gill.mp3" type="audio/mpeg"></audio> </div>
+<div class="box"> <img src="images\Punjabi\roti.jpg"> Roti <br/><audio controls> <source src="Music\Punjabi\ROTI - Sidhu Moose Wala.mp3" type="audio/mpeg"></audio> </div>
 </section>
-<br>
-<p class="bottom"><a href="index.html"> Back </a></p>
-<br>
-<footer class="footer">made by mu&be</footer>
+<br><br><br>
+<a href="index.html" class="button">Go To Home</a>
+<br><br><br><br><br>
+<footer class="footer">
+	<section> <div id="div1">Thank You!<br>Mu&Be<br>made by mu&be<br><br><br></div>
+	<div id="div2">All suggestions & feedback, please contact:<br>Email: muandbe@gmail.com</div></section>
+</footer>
 </body>
 </html>
