--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 <section>
 	<div class="image"><img src="images\No Music.png" class="responsive"></div>
 </section>
+<marquee >Attention!!!&nbsp&nbsp&nbspWebsite (About & Message) is updated today 18.05.2020.&nbsp&nbsp&nbspThanks</marquee><br>
+
 <section>
 	<div class="grid-wrapper">
 		<div class=" polaroid container box"><img src="images\Project.png">Latest</div>
